change components struct

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
 <!-- HTML Document -->
 
 <mat-toolbar>
-  <button mat-icon-button class="menu-button"><mat-icon>menu</mat-icon></button>
-  <img class="logo-qualiex" src="../assets/images/qualiex_logo_branco.png" alt="Logo-Qualiex"> 
-  <button class="select-application-button">
+  <button mat-icon-button class="menu-button">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <img class="logo-qualiex" src="../assets/images/qualiex_logo_branco.png" alt="Logo-Qualiex">
+  <button class="select-application-button" aria-haspopup="true">
     <div class="title-section">
       <span class="span-big span-left">Planner</span>
       <span class="span-small span-left">Gestão estratégica</span>
@@ -16,7 +18,7 @@
     <div class="user-section">
       <span class="span-medium span-right">Usuário Qualiex</span>
       <span class="span-small span-right">Unidade</span>
-    </div>  
+    </div>
     <img class="user-icon" src="../assets/images/user_icon.png" alt="icone-usuário">
   </button>
 </mat-toolbar>
