--- a/src/app/views/planner/planner.component.html
+++ b/src/app/views/planner/planner.component.html
@@ -1,10 +1,43 @@
 <!-- HTML Document -->
 
 <mat-drawer-container [hasBackdrop]="false">
-    <mat-drawer #drawer [mode]="over">
-        <button mat-button class="nav-button" routerLink="/">Visão Geral</button>
-        <button mat-button class="nav-button" routerLink="/Planos">Planos</button>
-    </mat-drawer>
-        <button mat-icon-button class="menu-button" (click)="drawer.toggle()"><mat-icon>menu</mat-icon></button>
-        <router-outlet></router-outlet>
+  <mat-drawer #drawer [mode]="over">
+    <button mat-button class="nav-button" routerLink="/VisaoGeral">Visão Geral</button>
+    <button mat-button class="nav-button" routerLink="/Planos">Planos</button>
+  </mat-drawer>
+
+  <button mat-icon-button class="menu-button" (click)="drawer.toggle()">
+    <mat-icon class="color-white">menu</mat-icon>
+  </button>
+
+  <div class="planner-content">
+    <mat-card class="title-card">
+      <h1>Visão Geral</h1>
+    </mat-card>
+
+    <div class="div-add-plan">
+      <button mat-icon-button class="button-add-plan">
+        <mat-icon>add</mat-icon>
+      </button>
+    </div>
+
+    <mat-card class="plans-card">
+      <router-outlet></router-outlet>
+    </mat-card>
+
+    <footer>
+      <div class="footer-text1 div-footer">
+        ©FORLOGIC 2019
+      </div>
+
+      <div class="footer-text2 div-footer">
+        PLANNER
+      </div>
+
+      <div class="footer-line"></div>
+    </footer>
+  </div>
+
 </mat-drawer-container>
+
+<button *ngIf="true" mat-icon-button class="top-button"><mat-icon class="top-button-icon">arrow_drop_up</mat-icon></button>
