--- a/src/styles.css
+++ b/src/styles.css
@@ -31,6 +31,7 @@ app-geral-view, app-plans {
     display: flex;
     align-items: center;
     flex-direction: column;
+    width: 100%!important;
 }
 
 div .mat-menu-content {
