--- a/src/app/shared/bottom-sheet/create-plan/create-plan.component.css
+++ b/src/app/shared/bottom-sheet/create-plan/create-plan.component.css
@@ -5,7 +5,7 @@ mat-tab-group {
     display: flex;
     width: 100%;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: flex-end;
 }
 
 mat-toolbar {
@@ -14,6 +14,16 @@ mat-toolbar {
     align-items: center;
     width: 100%!important;
     padding: 10px;
+    margin: 10px 0px 20px 0px;
+}
+
+mat-tab {
+    width: 100%;
+    height: 100%;
+}
+
+mat-datepicker-toggle {
+    font-size: 30px;
 }
 
 span {
@@ -21,6 +31,40 @@ span {
     font-weight: 400;
     width: 100%;
     margin-left: 10px;
+}
+
+.prefix-cost {
+    color: black;
+    font-size: 15pt;
+}
+
+.example-form {
+    /* min-width: 150px;
+    max-width: 500px; */
+    width: 90%;
+  }
+
+.example-full-width {
+    width: 100%;
+    margin-top: 20px;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.example-half-width {
+    width: 50%;
+    margin-top: 20px;
+    margin-left: 5%;
+}
+
+.dates-container {
+    display: flex;
+    flex-direction: row;
+}
+
+input, mat-select, textarea {
+    color: black;
+    font-size: 13pt;
 }
 
 .color-black {
@@ -38,4 +82,9 @@ span {
 
 .cancel-button {
     margin-left: 10px;
+}
+
+.div-dates {
+    display: flex;
+    flex-direction: row;
 }
