--- a/src/app/shared/dialogs/sucess-create-plan-type-dialog/sucess-create-plan-type-dialog.component.html
+++ b/src/app/shared/dialogs/sucess-create-plan-type-dialog/sucess-create-plan-type-dialog.component.html
@@ -1,7 +1,7 @@
 <!-- HTML Document -->
 
 <div class="dialog-container">
-    <h3 auto-focus>Plano cadastrado com sucesso !</h3>
+    <h3 auto-focus>Tipo de plano cadastrado com sucesso !</h3>
 
     <button mat-raised-button (click)="okButton()">Ok</button>
 </div>
