--- a/src/app/views/planner/components/plans/plans.component.css
+++ b/src/app/views/planner/components/plans/plans.component.css
@@ -10,6 +10,16 @@ mat-icon {
     margin-left: -10px;
 }
 
+mat-expansion-panel-header {
+    margin-bottom: 15px;
+}
+
+mat-expansion-panel {
+    width: 100%;
+    height: 100%;
+    padding: 20px 10px;
+}
+
 .no-plan-container {
     width: 100%;
     display: flex;
@@ -20,6 +30,19 @@ mat-icon {
 .no-plan-container h2 {
     color: rgb(44, 44, 44);
     font-weight: 500;
+}
+
+.internal-plans {
+    margin-top: 10px;
+    /* border-top: 2px solid rgba(0, 0, 0, 0.178); */
+}
+
+.child-pane {
+    display: flex;
+    flex-direction: row;
+    width: 95%;
+    margin-left: 5%;
+    background-color: white;
 }
 
 .example-container {
@@ -42,7 +65,6 @@ mat-icon {
   
 .example-box {
     padding: 20px 10px;
-    border-bottom: solid 1px #ccc;
     color: rgba(0, 0, 0, 0.87);
     display: flex;
     flex-direction: row;
@@ -85,16 +107,23 @@ mat-icon {
 }
 
 .info-plan {
+    margin-top: 25px;
     width: 100%;
     height: 100%;
 }
+
+.no-margin {
+    margin-top: 0;
+}
   
 .action-plan {
+    margin-top: 40px;
     height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    margin-right: 10px;
 }
 
 .mat-menu-item {
@@ -145,4 +174,14 @@ mat-icon {
 .action-span {
     text-align: left;
     width: 100%;
+}
+
+.no-child {
+    font-size: 12pt;
+    color: gray;
+    margin-left: 30px;
+}
+
+.margin-b {
+    margin-bottom: 25px;
 }
