--- a/src/app/views/planner/components/plans/plans.component.html
+++ b/src/app/views/planner/components/plans/plans.component.html
@@ -4,80 +4,166 @@
 <div cdkDropList [cdkDropListData]="plansList" class="example-list" (cdkDropListDropped)="drop($event)">
 
   <div *ngIf="!plansList.length>0" class="no-plan-container">
-    <h2>Não há planos cadastrados !</h2>
+    <h2>Não há planos cadastrado !</h2>
   </div>
 
   <div class="example-box" *ngFor="let plan of plansList" cdkDrag>
-    <div class="info-plan">
-      <span class="span-big">{{ plan.planName }}</span>
-      <span class="span-medium color-black">{{ plan.details.status }}</span>
-      <span class="span-medium color-gray">{{ plan.endDate }}</span>
-    </div>
 
-    <div class="action-plan">
-      <div class="info-plan">
-        <span class="span-medium color-black text-right">{{ user.name }}</span>
-        <span class="span-medium color-gray text-right">{{ user.email }}</span>
+    <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+      <mat-expansion-panel-header>
+
+        <div class="info-plan">
+          <span class="span-big">{{plan.planName}}</span>
+          <span class="span-medium color-black">{{plan.details.status}}</span>
+          <span class="span-medium color-gray margin-b">{{plan.showDate}}</span>
+        </div>
+
+        <div class="action-plan">
+          <div class="info-plan no-margin">
+            <span class="span-medium color-black text-right">{{user.name}}</span>
+            <span class="span-medium color-gray text-right">{{user.email}}</span>
+          </div>
+
+          <img class="user-icon" src="../assets/images/user_icon.png" alt="icone-usuário">
+
+          <button mat-icon-button [matMenuTriggerFor]="menu">
+            <mat-icon class="color-gray">more_vert</mat-icon>
+          </button>
+
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item class="color-gray">
+              <span class="action-span">
+                <mat-icon class="action-icon">edit</mat-icon>
+                Editar
+              </span>
+            </button>
+
+            <button mat-menu-item class="color-gray" [matMenuTriggerFor]="menuStatus">
+              <span class="action-span">
+                <mat-icon class="action-icon">cached</mat-icon>
+                Mudar status
+              </span>
+            </button>
+
+            <mat-menu #menuStatus="matMenu">
+              <button mat-menu-item class="color-gray" (click)="updateStatusPlan(plan, 'Aberto')">
+                <span class="action-span">
+                  <mat-icon class="action-icon">play_arrow</mat-icon>
+                  Iniciar
+                </span>
+              </button>
+
+              <button mat-menu-item class="color-gray" (click)="updateStatusPlan(plan, 'Concluído')">
+                <span class="action-span">
+                  <mat-icon class="action-icon">done</mat-icon>
+                  Concluir
+                </span>
+              </button>
+
+              <button mat-menu-item class="color-gray" (click)="updateStatusPlan(plan, 'Aguardando início')">
+                <span class="action-span">
+                  <mat-icon class="action-icon">pause</mat-icon>
+                  Suspender
+                </span>
+              </button>
+
+              <button mat-menu-item class="color-gray" (click)="updateStatusPlan(plan, 'Cancelado')">
+                <span class="action-span">
+                  <mat-icon class="action-icon">not_interested</mat-icon>
+                  Cancelar
+                </span>
+              </button>
+            </mat-menu>
+
+            <button mat-menu-item class="color-gray">
+              <span class="action-span">
+                <mat-icon class="action-icon">delete</mat-icon>
+                Remover
+              </span>
+            </button>
+          </mat-menu>
+        </div>
+      </mat-expansion-panel-header>
+
+      <div class="internal-plans" cdkDropList [cdkDropListData]="childPlans" (cdkDropListDropped)="drop($event)">
+        <div class="child-pane" *ngFor="let child of plan.childPlans" cdkDrag>
+  
+          <div class="info-plan">
+            <span class="span-big">{{child.planName}}</span>
+            <span class="span-medium color-black">{{child.details.status}}</span>
+            <span class="span-medium color-gray margin-b">{{child.showDate}}</span>
+          </div>
+
+          <div class="action-plan">
+            <div class="info-plan no-margin">
+              <span class="span-medium color-black text-right">{{user.name}}</span>
+              <span class="span-medium color-gray text-right">{{user.email}}</span>
+            </div>
+
+            <img class="user-icon" src="../assets/images/user_icon.png" alt="icone-usuário">
+
+            <button mat-icon-button [matMenuTriggerFor]="menu">
+              <mat-icon class="color-gray">more_vert</mat-icon>
+            </button>
+
+            <mat-menu #menu="matMenu">
+              <button mat-menu-item class="color-gray">
+                <span class="action-span">
+                  <mat-icon class="action-icon">edit</mat-icon>
+                  Editar
+                </span>
+              </button>
+
+              <button mat-menu-item class="color-gray" [matMenuTriggerFor]="menuStatus">
+                <span class="action-span">
+                  <mat-icon class="action-icon">cached</mat-icon>
+                  Mudar status
+                </span>
+              </button>
+
+              <mat-menu #menuStatus="matMenu">
+                <button mat-menu-item class="color-gray" (click)="updateStatusPlan(child, 'Aberto')">
+                  <span class="action-span">
+                    <mat-icon class="action-icon">play_arrow</mat-icon>
+                    Iniciar
+                  </span>
+                </button>
+
+                <button mat-menu-item class="color-gray" (click)="updateStatusPlan(child, 'Concluído')">
+                  <span class="action-span">
+                    <mat-icon class="action-icon">done</mat-icon>
+                    Concluir
+                  </span>
+                </button>
+
+                <button mat-menu-item class="color-gray" (click)="updateStatusPlan(child, 'Aguardando início')">
+                  <span class="action-span">
+                    <mat-icon class="action-icon">pause</mat-icon>
+                    Suspender
+                  </span>
+                </button>
+
+                <button mat-menu-item class="color-gray" (click)="updateStatusPlan(child, 'Cancelado')">
+                  <span class="action-span">
+                    <mat-icon class="action-icon">not_interested</mat-icon>
+                    Cancelar
+                  </span>
+                </button>
+              </mat-menu>
+
+              <button mat-menu-item class="color-gray">
+                <span class="action-span">
+                  <mat-icon class="action-icon">delete</mat-icon>
+                  Remover
+                </span>
+              </button>
+            </mat-menu>
+          </div>
+
+        </div>
       </div>
 
-      <img class="user-icon" src="../assets/images/user_icon.png" alt="icone-usuário">
-
-      <button mat-icon-button [matMenuTriggerFor]="menu">
-        <mat-icon class="color-gray">more_vert</mat-icon>
-      </button>
-
-      <mat-menu #menu="matMenu">
-        <button mat-menu-item class="color-gray">
-          <span class="action-span">
-            <mat-icon class="action-icon">edit</mat-icon>
-            Editar
-          </span>
-        </button>
-
-        <button mat-menu-item class="color-gray" [matMenuTriggerFor]="menuStatus">
-          <span class="action-span">
-            <mat-icon class="action-icon">cached</mat-icon>
-            Mudar status
-          </span>
-        </button>
-
-        <mat-menu #menuStatus="matMenu">
-          <button mat-menu-item class="color-gray" (click)="updateStatusPlan(plan, 'Aberto')">
-            <span class="action-span">
-              <mat-icon class="action-icon">play_arrow</mat-icon>
-              Iniciar
-            </span>
-          </button>
-
-          <button mat-menu-item class="color-gray" (click)="updateStatusPlan(plan, 'Concluído')">
-            <span class="action-span">
-              <mat-icon class="action-icon">done</mat-icon>
-              Concluir
-            </span>
-          </button>
-          
-          <button mat-menu-item class="color-gray" (click)="updateStatusPlan(plan, 'Aguardando início')">
-            <span class="action-span">
-              <mat-icon class="action-icon">pause</mat-icon>
-              Suspender
-            </span>
-          </button>
-          
-          <button mat-menu-item class="color-gray" (click)="updateStatusPlan(plan, 'Cancelado')">
-            <span class="action-span">
-              <mat-icon class="action-icon">not_interested</mat-icon>
-              Cancelar
-            </span>
-          </button>
-        </mat-menu>
-
-        <button mat-menu-item class="color-gray">
-          <span class="action-span">
-            <mat-icon class="action-icon">delete</mat-icon>
-            Remover
-          </span>
-        </button>
-      </mat-menu>
-    </div>
+      <span *ngIf="plan.childPlans === null" class="no-child">Sem sub-planos.</span>
+    </mat-expansion-panel>
   </div>
 </div>
