added remove option into datas

--- a/src/app/views/planner/components/plans-type/plans-type.component.html
+++ b/src/app/views/planner/components/plans-type/plans-type.component.html
@@ -25,7 +25,7 @@
           </span>
         </button>
 
-        <button mat-menu-item class="color-gray" (click)="planService.removePlanType(typePlan)">
+        <button mat-menu-item class="color-gray" (click)="removePlanType(typePlan)">
           <span>
             <mat-icon>delete</mat-icon>
             Remover
