missing filters by routing and fix drag and drop inside one another

--- a/src/app/shared/bottom-sheet/create-plan/create-plan.component.css
+++ b/src/app/shared/bottom-sheet/create-plan/create-plan.component.css
@@ -39,8 +39,8 @@ span {
 }
 
 .example-form {
-    /* min-width: 150px;
-    max-width: 500px; */
+    min-width: 150px;
+    max-width: 500px;
     width: 90%;
 }
 
