--- a/src/app/shared/bottom-sheet/create-plan/create-plan.component.html
+++ b/src/app/shared/bottom-sheet/create-plan/create-plan.component.html
@@ -28,12 +28,18 @@
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
-        <input matInput placeholder="Responsável (quem?)" formControlName="planResponsible" [matAutocomplete]="auto">
+        <!-- <input matInput placeholder="Responsável (quem?)" formControlName="planResponsible" [matAutocomplete]="auto">
         <mat-autocomplete #auto="matAutocomplete">
           <mat-option *ngFor="let person of people" [value]="person">
             {{person}}
           </mat-option>
-        </mat-autocomplete>
+        </mat-autocomplete> -->
+        <mat-label>Responsável (quem?)</mat-label>
+        <mat-select formControlName="planResponsible">
+          <mat-option *ngFor="let person of people" [value]="person">
+            {{person.name}}
+          </mat-option>
+        </mat-select>
       </mat-form-field>
 
       <div class="dates-container">
