--- a/src/app/views/planner/components/plans/plans.component.css
+++ b/src/app/views/planner/components/plans/plans.component.css
@@ -4,6 +4,19 @@
     color: black;
 }
 
+mat-chip-list {
+    margin-top: 50px;
+}
+
+mat-chip {
+    background-color: rgb(75, 152, 253)!important;
+    transition: all 0.2s;
+}
+
+mat-chip:hover {
+    -webkit-transform: scale(1.1);
+}
+
 mat-icon {
     color: white;
     font-size: 35px;
@@ -12,12 +25,17 @@ mat-icon {
 
 mat-expansion-panel-header {
     margin-bottom: 15px;
+    background-color: rgba(255, 255, 255, 0)!important;
 }
 
 mat-expansion-panel {
     width: 100%;
     height: 100%;
     padding: 20px 10px;
+}
+
+mat-expansion-panel:hover {
+    background-color: rgb(247, 252, 255)!important;
 }
 
 .no-plan-container {
