--- a/src/app/views/planner/components/plans/plans.component.html
+++ b/src/app/views/planner/components/plans/plans.component.html
@@ -1,111 +1,35 @@
 <!-- HTML Document -->
 
 <mat-chip-list aria-label="Fish selection">
-  <mat-chip (click)="setRouteFilter(1)" selected>Todos</mat-chip>
-  <mat-chip (click)="setRouteFilter(2)" selected>Meus planos</mat-chip>
-  <mat-chip (click)="setRouteFilter(3)" selected>Iniciados</mat-chip>
-  <mat-chip (click)="setRouteFilter(4)" selected>Concluídos</mat-chip>
-  <mat-chip (click)="setRouteFilter(5)" selected>Suspensos</mat-chip>
-  <mat-chip (click)="setRouteFilter(6)" selected>Cancelados</mat-chip>
+  <mat-chip routerLink="/Planos/Todos" routerLinkActive="chip-active" selected>Todos</mat-chip>
+  <mat-chip routerLink="/Planos/MeusPlanos" routerLinkActive="chip-active" selected>Meus planos</mat-chip>
+  <mat-chip routerLink="/Planos/Iniciados" routerLinkActive="chip-active" selected>Iniciados</mat-chip>
+  <mat-chip routerLink="/Planos/Concluidos" routerLinkActive="chip-active" selected>Concluídos</mat-chip>
+  <mat-chip routerLink="/Planos/Suspensos" routerLinkActive="chip-active" selected>Suspensos</mat-chip>
+  <mat-chip routerLink="/Planos/Cancelados" routerLinkActive="chip-active" selected>Cancelados</mat-chip>
 </mat-chip-list>
+<div cdkDropListGroup class="div-group-cdk">
+  <div cdkDropList [cdkDropListData]="plansList" class="example-list" (cdkDropListDropped)="drop($event)">
 
-<div cdkDropList [cdkDropListData]="plansList" class="example-list" (cdkDropListDropped)="drop($event)">
+    <div *ngIf="!plansList.length>0" class="no-plan-container">
+      <h2>Nenhum plano encontrado !</h2>
+    </div>
 
-  <div *ngIf="!plansList.length>0" class="no-plan-container">
-    <h2>Não há planos cadastrado !</h2>
-  </div>
+    <div class="example-box" cdkDrag [cdkDragData]="plan" *ngFor="let plan of plansList">
 
-  <div class="example-box" *ngFor="let plan of plansList" cdkDrag>
+      <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+        <mat-expansion-panel-header>
 
-    <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
-      <mat-expansion-panel-header>
-
-        <div class="info-plan">
-          <span class="span-big">{{plan.planName}}</span>
-          <span class="span-medium color-black">{{plan.details.status}}</span>
-          <span class="span-medium color-gray margin-b">{{plan.showDate}}</span>
-        </div>
-
-        <div class="action-plan">
-          <div class="info-plan no-margin">
-            <span class="span-medium color-black text-right">{{plan.planResponsible.name}}</span>
-            <span class="span-medium color-gray text-right">{{plan.planResponsible.email}}</span>
-          </div>
-
-          <img class="user-icon" src="../assets/images/user_icon.png" alt="icone-usuário">
-
-          <button mat-icon-button [matMenuTriggerFor]="menu">
-            <mat-icon class="color-gray">more_vert</mat-icon>
-          </button>
-
-          <mat-menu #menu="matMenu">
-            <button mat-menu-item class="color-gray" routerLink="EditarPlano" (click)="updatePlan(plan)">
-              <span class="action-span">
-                <mat-icon class="action-icon">edit</mat-icon>
-                Editar
-              </span>
-            </button>
-
-            <button mat-menu-item class="color-gray" [matMenuTriggerFor]="menuStatus">
-              <span class="action-span">
-                <mat-icon class="action-icon">cached</mat-icon>
-                Mudar status
-              </span>
-            </button>
-
-            <mat-menu #menuStatus="matMenu">
-              <button mat-menu-item class="color-gray" (click)="updateStatusPlan(plan, 'Aberto')">
-                <span class="action-span">
-                  <mat-icon class="action-icon">play_arrow</mat-icon>
-                  Iniciar
-                </span>
-              </button>
-
-              <button mat-menu-item class="color-gray" (click)="updateStatusPlan(plan, 'Concluído')">
-                <span class="action-span">
-                  <mat-icon class="action-icon">done</mat-icon>
-                  Concluir
-                </span>
-              </button>
-
-              <button mat-menu-item class="color-gray" (click)="updateStatusPlan(plan, 'Aguardando início')">
-                <span class="action-span">
-                  <mat-icon class="action-icon">pause</mat-icon>
-                  Suspender
-                </span>
-              </button>
-
-              <button mat-menu-item class="color-gray" (click)="updateStatusPlan(plan, 'Cancelado')">
-                <span class="action-span">
-                  <mat-icon class="action-icon">not_interested</mat-icon>
-                  Cancelar
-                </span>
-              </button>
-            </mat-menu>
-
-            <button mat-menu-item class="color-gray" (click)="removePlan(plan)">
-              <span class="action-span">
-                <mat-icon class="action-icon">delete</mat-icon>
-                Remover
-              </span>
-            </button>
-          </mat-menu>
-        </div>
-      </mat-expansion-panel-header>
-
-      <div class="internal-plans" cdkDropList [cdkDropListData]="plan.childPlans" (cdkDropListDropped)="drop($event)">
-        <div class="child-pane" *ngFor="let child of plan.childPlans" cdkDrag>
-  
           <div class="info-plan">
-            <span class="span-big">{{child.planName}}</span>
-            <span class="span-medium color-black">{{child.details.status}}</span>
-            <span class="span-medium color-gray margin-b">{{child.showDate}}</span>
+            <span class="span-big">{{plan.planName}}</span>
+            <span class="span-medium color-black">{{plan.details.status}}</span>
+            <span class="span-medium color-gray margin-b">{{plan.showDate}}</span>
           </div>
 
           <div class="action-plan">
             <div class="info-plan no-margin">
-              <span class="span-medium color-black text-right">{{child.planResponsible.name}}</span>
-              <span class="span-medium color-gray text-right">{{child.planResponsible.email}}</span>
+              <span class="span-medium color-black text-right">{{plan.planResponsible.name}}</span>
+              <span class="span-medium color-gray text-right">{{plan.planResponsible.email}}</span>
             </div>
 
             <img class="user-icon" src="../assets/images/user_icon.png" alt="icone-usuário">
@@ -115,7 +39,7 @@
             </button>
 
             <mat-menu #menu="matMenu">
-              <button mat-menu-item class="color-gray" routerLink="EditarPlano" (click)="updatePlan(child)">
+              <button mat-menu-item class="color-gray" routerLink="EditarPlano" (click)="updatePlan(plan)">
                 <span class="action-span">
                   <mat-icon class="action-icon">edit</mat-icon>
                   Editar
@@ -130,28 +54,28 @@
               </button>
 
               <mat-menu #menuStatus="matMenu">
-                <button mat-menu-item class="color-gray" (click)="updateStatusPlan(child, 'Aberto')">
+                <button mat-menu-item class="color-gray" (click)="updateStatusPlan(plan, 'Aberto')">
                   <span class="action-span">
                     <mat-icon class="action-icon">play_arrow</mat-icon>
                     Iniciar
                   </span>
                 </button>
 
-                <button mat-menu-item class="color-gray" (click)="updateStatusPlan(child, 'Concluído')">
+                <button mat-menu-item class="color-gray" (click)="updateStatusPlan(plan, 'Concluído')">
                   <span class="action-span">
                     <mat-icon class="action-icon">done</mat-icon>
                     Concluir
                   </span>
                 </button>
 
-                <button mat-menu-item class="color-gray" (click)="updateStatusPlan(child, 'Aguardando início')">
+                <button mat-menu-item class="color-gray" (click)="updateStatusPlan(plan, 'Aguardando início')">
                   <span class="action-span">
                     <mat-icon class="action-icon">pause</mat-icon>
                     Suspender
                   </span>
                 </button>
 
-                <button mat-menu-item class="color-gray" (click)="updateStatusPlan(child, 'Cancelado')">
+                <button mat-menu-item class="color-gray" (click)="updateStatusPlan(plan, 'Cancelado')">
                   <span class="action-span">
                     <mat-icon class="action-icon">not_interested</mat-icon>
                     Cancelar
@@ -159,7 +83,7 @@
                 </button>
               </mat-menu>
 
-              <button mat-menu-item class="color-gray" (click)="removePlan(child)">
+              <button mat-menu-item class="color-gray" (click)="removePlan(plan)">
                 <span class="action-span">
                   <mat-icon class="action-icon">delete</mat-icon>
                   Remover
@@ -167,11 +91,88 @@
               </button>
             </mat-menu>
           </div>
+        </mat-expansion-panel-header>
 
+        <div class="internal-plans" cdkDropList [cdkDropListData]="plan.childPlans" (cdkDropListDropped)="drop($event)">
+          <div class="child-pane" cdkDrag [cdkDragData]="child" *ngFor="let child of plan.childPlans">
+
+            <div class="info-plan">
+              <span class="span-big">{{child.planName}}</span>
+              <span class="span-medium color-black">{{child.details.status}}</span>
+              <span class="span-medium color-gray margin-b">{{child.showDate}}</span>
+            </div>
+
+            <div class="action-plan">
+              <div class="info-plan no-margin">
+                <span class="span-medium color-black text-right">{{child.planResponsible.name}}</span>
+                <span class="span-medium color-gray text-right">{{child.planResponsible.email}}</span>
+              </div>
+
+              <img class="user-icon" src="../assets/images/user_icon.png" alt="icone-usuário">
+
+              <button mat-icon-button [matMenuTriggerFor]="menu">
+                <mat-icon class="color-gray">more_vert</mat-icon>
+              </button>
+
+              <mat-menu #menu="matMenu">
+                <button mat-menu-item class="color-gray" routerLink="EditarPlano" (click)="updatePlan(child)">
+                  <span class="action-span">
+                    <mat-icon class="action-icon">edit</mat-icon>
+                    Editar
+                  </span>
+                </button>
+
+                <button mat-menu-item class="color-gray" [matMenuTriggerFor]="menuStatus">
+                  <span class="action-span">
+                    <mat-icon class="action-icon">cached</mat-icon>
+                    Mudar status
+                  </span>
+                </button>
+
+                <mat-menu #menuStatus="matMenu">
+                  <button mat-menu-item class="color-gray" (click)="updateStatusPlan(child, 'Aberto')">
+                    <span class="action-span">
+                      <mat-icon class="action-icon">play_arrow</mat-icon>
+                      Iniciar
+                    </span>
+                  </button>
+
+                  <button mat-menu-item class="color-gray" (click)="updateStatusPlan(child, 'Concluído')">
+                    <span class="action-span">
+                      <mat-icon class="action-icon">done</mat-icon>
+                      Concluir
+                    </span>
+                  </button>
+
+                  <button mat-menu-item class="color-gray" (click)="updateStatusPlan(child, 'Aguardando início')">
+                    <span class="action-span">
+                      <mat-icon class="action-icon">pause</mat-icon>
+                      Suspender
+                    </span>
+                  </button>
+
+                  <button mat-menu-item class="color-gray" (click)="updateStatusPlan(child, 'Cancelado')">
+                    <span class="action-span">
+                      <mat-icon class="action-icon">not_interested</mat-icon>
+                      Cancelar
+                    </span>
+                  </button>
+                </mat-menu>
+
+                <button mat-menu-item class="color-gray" (click)="removePlan(child)">
+                  <span class="action-span">
+                    <mat-icon class="action-icon">delete</mat-icon>
+                    Remover
+                  </span>
+                </button>
+              </mat-menu>
+            </div>
+
+          </div>
         </div>
-      </div>
 
-      <span *ngIf="plan.childPlans === null" class="no-child">Sem sub-planos.</span>
-    </mat-expansion-panel>
+        <span *ngIf="plan.childPlans === null" class="no-child">Sem sub-planos.</span>
+      </mat-expansion-panel>
+    </div>
   </div>
 </div>
