--- a/src/styles.css
+++ b/src/styles.css
@@ -27,7 +27,7 @@ mat-toolbar {
     z-index: 11;
 }
 
-app-geral-view, app-plans, app-plans-type {
+app-geral-view, app-plans, app-plans-type, app-loading {
     display: flex;
     align-items: center;
     flex-direction: column;
