added reponsividade to main bar

--- a/src/app/views/planner/planner.component.html
+++ b/src/app/views/planner/planner.component.html
@@ -7,9 +7,9 @@
     <button mat-button class="nav-button" (click)="planService.setTitle(3)" routerLinkActive="mat-active" routerLink="/TiposDePlano">Tipos de Plano</button>
   </mat-drawer>
 
-  <button mat-icon-button class="menu-button" (click)="drawer.toggle()">
+  <!-- <button mat-icon-button class="menu-button" (click)="drawer.toggle()">
     <mat-icon class="color-white">menu</mat-icon>
-  </button>
+  </button> -->
 
   <div class="planner-content">
     <mat-card class="title-card">
