--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,11 +13,12 @@
     <mat-icon>arrow_drop_down</mat-icon>
   </button>
   <div class="fill-space"></div>
-  <button class="att-button">ATUALIZAÇÕES</button>
+  <button class="att-button no-screen">ATUALIZAÇÕES</button>
+  <button class="att-button att-option"><mat-icon>cached</mat-icon></button>
   <button class="perfil-button">
     <div class="user-section">
-      <span class="span-medium span-right">Usuário Qualiex</span>
-      <span class="span-small span-right">Unidade</span>
+      <span class="span-medium span-right hide-user">Usuário Qualiex</span>
+      <span class="span-small span-right hide-user">Unidade</span>
     </div>
     <img class="user-icon" src="../assets/images/user_icon.png" alt="icone-usuário">
   </button>
