--- a/src/styles.css
+++ b/src/styles.css
@@ -57,3 +57,36 @@ mat-tab-header {
     box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.171)!important;
     border-bottom: 0!important;
 }
+
+@media screen and (max-width:650px) {
+    .hide-user {
+        display: none!important;
+    }
+
+    .user-section {
+        margin-left: 0px!important;
+    }
+
+    .user-icon {
+        border-left: 1px solid rgba(0, 0, 0, 0.171);
+        border-right: 1px solid rgba(0, 0, 0, 0.171);
+    }
+}
+
+@media screen and (min-width:700px) {
+    .att-option {
+        display: none!important;
+    }
+}
+
+@media screen and (max-width:700px) {
+    .no-screen {
+        display: none!important;
+    }
+}
+
+@media screen and (max-width:850px) {
+    .text-right {
+        display: none!important;
+    }
+}
