--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,9 @@
   </button>
   <img class="logo-qualiex" src="../assets/images/qualiex_logo_branco.png" alt="Logo-Qualiex">
   <button class="select-application-button" aria-haspopup="true">
-    <div class="title-section">
+    <div class="title-section main-title">
       <span class="span-big span-left">Planner</span>
-      <span class="span-small span-left">Gestão estratégica</span>
+      <span class="span-small span-left none-subtext">Gestão estratégica</span>
     </div>
     <mat-icon>arrow_drop_down</mat-icon>
   </button>
